2007-10-18 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_dir_view.[ch]: DirView -> GimvDirView
	* src/gimageview.[ch], src/gimv_thumb_win.[ch], src/gimv_thumb_view.c:
	Follow the change.

2007-10-18 Takuro Ashie <ashie@homa.ne.jp>

	* src/pixbuf_utils.[ch]: Removed.
	* src/gimv_image.c: Move codes in pixbuf_utils.c to this file.

2007-10-18 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_exif_view.[ch]: ExifView -> GimvExifView
	* src/gimv_image_win.c, src/gimv_thumb_view.c: Follow the change.

2007-10-18 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_text_win.[ch]: TextViewer -> GimvTextWin
	* src/help.c: Follow the change.

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_saver/dither.[ch]: Moved from src/
	* src/Makefile.am, plugins/image_saver/Makefile.am: Follow the change.

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_view_draw.c: Rename from image_view_draw.c
	* src/gimv_thumb_view_album.c: Rename from thumbnail_view_album.c
	* src/Makefile.am: Follow tha change.

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_exif_view.[ch]: Rename from src/exif_view.[ch]
	* src/Makefile.am, src/gimv_image_win.c. src/gimv_thumb_view.c:
	Follow the change.

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_dir_view.[ch]: Renamed from src/dirview.[ch]
	* src/Makefile.am, src/gimageview.c src/gimv_thumb_view.c,
	  src/gimv_thumb_win.c, src/prefs_ui/prefs_ui_thumbwin.c:
	Follow the change.

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_text_win.[ch]: Renamed from src/text_viewer.[ch]
	* src/Makefile.am, src/help.c: Follow the change.

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_nav_win.[ch]: Use private struct.

2007-10-16 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/thumbnail/gimv_thumb.c, plugins/image_loader/prefs_spi.c,
	  plugins/image_view/prefs_xine.c, plugins/image_view/prefs_mplayer.c,
	  src/gimv_elist.c, src/gimv_image_win.c, src/auto_completion.c,