@@ -1,3 +1,9 @@
+2007-10-19 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/gimv_slideshow.[ch], src/gimv_image_win.[ch], src/gimageview.[ch],
+	  src/gimv_thumb_win.c:
+	SlideShow -> Slideshow
+
 2007-10-18 Takuro Ashie <ashie@homa.ne.jp>
 
 	* src/gimv_dir_view.[ch]: DirView -> GimvDirView
